@@ -1,7 +1,7 @@
 Package: ma
 Type: Package
 Title: Model Averaging
-Version: 1.08
+Version: 1.09
 Date: 2017-03-15
 Imports: quadprog
 Suggests: crs, np, rgl
